--- a/finetuned_VIT_model.ipynb
+++ b/finetuned_VIT_model.ipynb
@@ -12,7 +12,7 @@
     "from transformers import ViTForImageClassification, ViTImageProcessor, Trainer, TrainingArguments\n",
     "from sklearn.metrics import accuracy_score\n",
     "import os\n",
-    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data import Dataset  \n",
     "from PIL import Image\n",
     "\n",
     "\n",
@@ -24,7 +24,7 @@
     "\n",
     "\n",
     "\n",
-    "# freezing the backbone\n",
+    "# freezing the backbonee\n",
     "\n",
     "for param in model.vit.parameters():\n",
     "    param.requires_grad = False\n",
