--- a/finetuned_VIT_model.ipynb
+++ b/finetuned_VIT_model.ipynb
@@ -7,100 +7,191 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import PyTorch core library\n",
     "import torch\n",
+    "\n",
+    "# Import DataLoader utility (not used directly but common in datasets)\n",
     "from torch.utils.data import DataLoader\n",
-    "from transformers import ViTForImageClassification, ViTImageProcessor, Trainer, TrainingArguments\n",
+    "\n",
+    "# Import Hugging Face ViT model, image processor, trainer utilities\n",
+    "from transformers import (\n",
+    "    ViTForImageClassification,\n",
+    "    ViTImageProcessor,\n",
+    "    Trainer,\n",
+    "    TrainingArguments\n",
+    ")\n",
+    "\n",
+    "# Import accuracy metric from sklearn\n",
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Import OS module for file and directory operations\n",
     "import os\n",
+    "\n",
+    "# Import Dataset base class for custom dataset creation\n",
     "from torch.utils.data import Dataset  \n",
+    "\n",
+    "# Import PIL Image for loading images\n",
     "from PIL import Image\n",
     "\n",
     "\n",
+    "# =========================\n",
+    "# MODEL & PROCESSOR\n",
+    "# =========================\n",
+    "\n",
+    "# Hugging Face model checkpoint (pretrained ViT)\n",
     "model_name = \"dima806/ai_vs_real_image_detection\"\n",
     "\n",
+    "# Load image processor (handles resizing, normalization, etc.)\n",
     "processor = ViTImageProcessor.from_pretrained(model_name)\n",
     "\n",
-    "model = ViTForImageClassification.from_pretrained(model_name,num_labels = 2)\n",
+    "# Load ViT model for image classification with 2 output classes (REAL, FAKE)\n",
+    "model = ViTForImageClassification.from_pretrained(\n",
+    "    model_name,\n",
+    "    num_labels=2\n",
+    ")\n",
     "\n",
     "\n",
+    "# =========================\n",
+    "# FREEZE ViT BACKBONE\n",
+    "# =========================\n",
     "\n",
-    "# freezing the backbonee\n",
-    "\n",
+    "# Freeze all parameters of the ViT backbone\n",
+    "# This prevents updating pretrained weights during training\n",
     "for param in model.vit.parameters():\n",
     "    param.requires_grad = False\n",
     "\n",
     "\n",
+    "# =========================\n",
+    "# CUSTOM DATASET\n",
+    "# =========================\n",
     "\n",
+    "# Define a custom PyTorch Dataset for image classification\n",
     "class imagedataset(Dataset):\n",
     "\n",
-    "    def __init__(self,root_dir,processor):\n",
+    "    # Constructor\n",
+    "    def __init__(self, root_dir, processor):\n",
     "\n",
+    "        # Store all image file paths\n",
     "        self.image_path = []\n",
+    "\n",
+    "        # Store corresponding labels\n",
     "        self.labels = []\n",
+    "\n",
+    "        # Store the image processor\n",
     "        self.processor = processor\n",
     "\n",
-    "        for label,folder in enumerate(['REAL','FAKE']):\n",
-    "            folder_path = os.path.join(root_dir,folder)\n",
+    "        # Enumerate folders: REAL → 0, FAKE → 1\n",
+    "        for label, folder in enumerate(['REAL', 'FAKE']):\n",
     "\n",
-    "            for img_file in (os.listdir(folder_path)):\n",
-    "                self.image_path.append(os.path.join(folder_path,img_file))\n",
+    "            # Create full path to folder\n",
+    "            folder_path = os.path.join(root_dir, folder)\n",
+    "\n",
+    "            # Iterate through all images in the folder\n",
+    "            for img_file in os.listdir(folder_path):\n",
+    "                self.image_path.append(\n",
+    "                    os.path.join(folder_path, img_file)\n",
+    "                )\n",
     "                self.labels.append(label)\n",
     "\n",
+    "    # Return total number of samples\n",
     "    def __len__(self):\n",
     "        return len(self.image_path)\n",
     "\n",
-    "    def __getitem__(self,idx):\n",
+    "    # Return one processed sample\n",
+    "    def __getitem__(self, idx):\n",
     "\n",
+    "        # Load image and convert to RGB format\n",
     "        image = Image.open(self.image_path[idx]).convert(\"RGB\")\n",
     "\n",
-    "        inputs = self.processor(image,return_tensors = \"pt\")\n",
+    "        # Process image using ViT image processor\n",
+    "        inputs = self.processor(\n",
+    "            image,\n",
+    "            return_tensors=\"pt\"\n",
+    "        )\n",
     "\n",
+    "        # Create a new dictionary for model inputs\n",
     "        new_inputs = {}\n",
     "\n",
+    "        # Remove batch dimension added by processor\n",
     "        for key in inputs:\n",
+    "            new_inputs[key] = inputs[key].squeeze(0)\n",
     "\n",
-    "            new_inputs[key] = inputs[key].squeeze(0)   #remove the dimension\n",
-    "\n",
+    "        # Add label tensor for training\n",
     "        new_inputs[\"labels\"] = torch.tensor(self.labels[idx])\n",
     "\n",
     "        return new_inputs\n",
     "\n",
     "\n",
-    "train_dataset = imagedataset(root_dir=r\"/content/dataset/train\",processor=processor)\n",
-    "test_dataset = imagedataset(root_dir=\"/content/dataset/test\",processor=processor)\n",
+    "# =========================\n",
+    "# DATASETS\n",
+    "# =========================\n",
+    "\n",
+    "# Create training dataset\n",
+    "train_dataset = imagedataset(\n",
+    "    root_dir=r\"/content/dataset/train\",\n",
+    "    processor=processor\n",
+    ")\n",
+    "\n",
+    "# Create testing/validation dataset\n",
+    "test_dataset = imagedataset(\n",
+    "    root_dir=\"/content/dataset/test\",\n",
+    "    processor=processor\n",
+    ")\n",
     "\n",
     "\n",
+    "# =========================\n",
+    "# TRAINING ARGUMENTS\n",
+    "# =========================\n",
     "\n",
+    "# Define training configuration\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"./vit_finetune\",\n",
-    "    per_device_train_batch_size=16,\n",
-    "    per_device_eval_batch_size=16,\n",
-    "    num_train_epochs=2,\n",
-    "    learning_rate=1e-4,\n",
-    "    eval_strategy = \"steps\",\n",
-    "    eval_steps= 500,\n",
-    "    logging_dir=\"./logs\",\n",
-    "    load_best_model_at_end=True,\n",
-    "    report_to=\"none\"   # 🚀 disables wandb\n",
+    "    output_dir=\"./vit_finetune\",            # Directory to save checkpoints\n",
+    "    per_device_train_batch_size=16,         # Batch size for training\n",
+    "    per_device_eval_batch_size=16,          # Batch size for evaluation\n",
+    "    num_train_epochs=2,                     # Number of training epochs\n",
+    "    learning_rate=1e-4,                     # Learning rate\n",
+    "    eval_strategy=\"steps\",                  # Run evaluation every few steps\n",
+    "    eval_steps=500,                         # Evaluate every 500 steps\n",
+    "    logging_dir=\"./logs\",                   # Directory for logs\n",
+    "    load_best_model_at_end=True,             # Load best checkpoint after training\n",
+    "    report_to=\"none\"                        # Disable Weights & Biases logging\n",
     ")\n",
     "\n",
     "\n",
+    "# =========================\n",
+    "# METRICS\n",
+    "# =========================\n",
     "\n",
-    "\n",
+    "# Function to compute evaluation metrics\n",
     "def compute_metrics(eval_pred):\n",
-    "    logits, labels = eval_pred\n",
-    "    preds = logits.argmax(axis=1)\n",
-    "    return {\"accuracy\": accuracy_score(labels, preds)}\n",
     "\n",
+    "    # Unpack predictions and true labels\n",
+    "    logits, labels = eval_pred\n",
+    "\n",
+    "    # Convert logits to predicted class indices\n",
+    "    preds = logits.argmax(axis=1)\n",
+    "\n",
+    "    # Compute and return accuracy\n",
+    "    return {\n",
+    "        \"accuracy\": accuracy_score(labels, preds)\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# TRAINER\n",
+    "# =========================\n",
+    "\n",
+    "# Initialize Hugging Face Trainer\n",
     "trainer = Trainer(\n",
-    "    model =model,\n",
-    "    args = training_args,\n",
-    "    train_dataset = train_dataset,\n",
-    "    eval_dataset =test_dataset,\n",
-    "    tokenizer = processor,\n",
-    "    compute_metrics = compute_metrics\n",
+    "    model=model,                     # ViT model\n",
+    "    args=training_args,              # Training configuration\n",
+    "    train_dataset=train_dataset,     # Training data\n",
+    "    eval_dataset=test_dataset,       # Evaluation data\n",
+    "    tokenizer=processor,             # Image processor (acts as tokenizer)\n",
+    "    compute_metrics=compute_metrics  # Metrics function\n",
     ")\n",
     "\n",
+    "# Start fine-tuning\n",
     "trainer.train()\n"
    ]
   }
